--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>A Timeline Of Bogyoke Aung San</title>
   <link rel="stylesheet" type="text/css" href="public/css/paper.min.css">
   <link rel="stylesheet" type="text/css" href="public/css/bootstrap.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
