--- a/home.html
+++ b/home.html
@@ -3,9 +3,8 @@
 <head>
 	<title></title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="public/css/home.css">
-	<link rel="stylesheet" href="public/css/bootstrap.min.css">
-			
+	<link rel="stylesheet" href="home.css">
+	<link rel="stylesheet" href="public/css/bootstrap.min.css">		
 </head>
 <body>
 
@@ -13,7 +12,6 @@
 <header>
 	<h1>An Interactive Timeline Of Bogyoke Aung San</h1>
 </header>
-
 
 <div class="container">
 	<ul class="timeline">
