--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title></title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="public/css/home.css">
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="public/css/bootstrap.min.css">
 			
 </head>
 <body>
