--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title></title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="public/css/home.css">
 	<link rel="stylesheet" href="public/css/bootstrap.min.css">
 			
